fix build after Elastic upgrade